# otus-optimization-code

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml  tasks.py
examples/: README.md
examples/cpu_bound/: 01_Simple.ipynb  02_Multiprocessing.ipynb  03_Pandarellel.ipynb  04_Modin.ipynb  variables.py  workload.py  workload_cache.py
examples/io_bound/: 01_Sync.ipynb  02_Multithreading.ipynb  03_Async.ipynb  app.py
examples/optimization/: 01_Alone.ipynb  02_Numba.ipynb
examples/other/: 01_Dask.ipynb  02_Polars.ipynb
requirements/: requirements-dev.txt  requirements-lint.txt  requirements.txt
