[project]
name = "otus-optimization-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.4",
    "asyncio==3.4.3",
    "black==24.10.0",
    "dask[dataframe]==2024.11.2",
    "fastapi==0.115.5",
    "gdown==5.2.0",
    "graphviz==0.20.3",
    "invoke==2.2.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "isort==5.13.2",
    "modin==0.32.0",
    "numba==0.60.0",
    "pandarallel==1.6.5",
    "pandas==2.2.3",
    "polars==1.14.0",
    "pyarrow==18.0.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "pymorphy3==2.0.2",
    "python-dotenv==1.0.1",
    "ray==2.39.0",
    "requests==2.32.3",
    "snakeviz==2.2.2",
    "tqdm==4.67.0",
    "uvicorn==0.32.0",
]
